# rust_timesnapper_checker

./: Cargo.toml  README.md  wkspc.code-workspace
.cargo/: config.toml
src/: config.rs  main.rs  settings_popup.rs  system_tray.rs  test_layout.rs
