[package]
name = "rust_win_gui"
version = "0.1.0"
authors = ["swiftaff <swiftaff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = {version = "1.0.1", features = ["tray-notification", "message-window", "menu", "cursor"]}
native-windows-derive = "1.0.0"
